--- a/src/Aulas Programacao Orientada a Objetos/Aula07/ModificadoresAcesso/GestaoFrotas/GestaoFrotas.ConsoleApp/GestaoFrotas.ConsoleApp.csproj
+++ b/src/Aulas Programacao Orientada a Objetos/Aula07/ModificadoresAcesso/GestaoFrotas/GestaoFrotas.ConsoleApp/GestaoFrotas.ConsoleApp.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\GestaoFrotas.LogicaNegocio\GestaoFrotas.LogicaNegocio.csproj" />
     <ProjectReference Include="..\GestaoFrotas.ModeloDados\GestaoFrotas.ModeloDados.csproj" />
   </ItemGroup>
 
