--- a/src/ADO .NET – Acesso a Dados/Aula 03/DatabaseFirstDotnetCore.ConsoleApp/DatabaseFirstDotnetCore.ConsoleApp/DatabaseFirstDotnetCore.ConsoleApp.csproj
+++ b/src/ADO .NET – Acesso a Dados/Aula 03/DatabaseFirstDotnetCore.ConsoleApp/DatabaseFirstDotnetCore.ConsoleApp/DatabaseFirstDotnetCore.ConsoleApp.csproj
@@ -13,6 +13,8 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.1" />
+    <PackageReference Include="MiniProfiler" Version="4.3.8" />
+    <PackageReference Include="MiniProfiler.EntityFrameworkCore" Version="4.3.8" />
   </ItemGroup>
 
 </Project>
