--- a/src/ADO .NET – Acesso a Dados/Aula 08/MongoDB.WebApi/MongoDB.WebApi/appsettings.json
+++ b/src/ADO .NET – Acesso a Dados/Aula 08/MongoDB.WebApi/MongoDB.WebApi/appsettings.json
@@ -1,14 +1,14 @@
 {
+  "LivrariaDatabase": {
+    "ConnectionString": "mongodb+srv://jonatasafonso:PPZpTQprbretuNpG@clusterjaon.omxm3ou.mongodb.net/?retryWrites=true&w=majority",
+    "DatabaseName": "Biblioteca",
+    "LivrosCollectionName": "Livros"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "LivrariaDatabase": {
-    "ConnectionString": "mongodb+srv://jonatasafonso:PPZpTQprbretuNpG@clusterjaon.omxm3ou.mongodb.net/?retryWrites=true&w=majority",
-    "DatabaseName": "Biblioteca",
-    "LivrosCollectionName": "Livros"
-  }
+  "AllowedHosts": "*"
 }
